--- a/fabsoft-frontend/src/app/usuario/usuario.html
+++ b/fabsoft-frontend/src/app/usuario/usuario.html
@@ -1,13 +1,20 @@
 <main class="container">
+    <h2>Usuarios</h2>
+    <button class="btn btn-primary" (click)="novo()">Novo</button>
+
     <table class="table">
         <thead>
             <tr>
                 <th>Nome</th>
+                <th>Email</th>
+                <th>Tefone</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let umUsuario of listaUsuario">
                 <td>{{ umUsuario.nome }}</td>
+                <td>{{ umUsuario.email }}</td>
+                <td>{{ umUsuario.telefone }}</td>
             </tr>
         </tbody>
     </table>
