--- a/fabsoft-frontend/src/app/form-usuario/form-usuario.html
+++ b/fabsoft-frontend/src/app/form-usuario/form-usuario.html
@@ -1,1 +1,24 @@
-<p>form-usuario works!</p>
+<main class="container">
+    <h2>Usuario</h2>
+    <div class="card">
+        <div class="card-body">
+            <div class="form-group">
+                <label for="txtNome">Nome</label>
+                <input type="text" [(ngModel)]="usuario.nome" 
+                class="form-control" id="txtNome">
+            </div>
+            <div class="form-group">
+                <label for="txtEmail">Email:</label>
+                <input type="text" [(ngModel)]="usuario.email" 
+                class="form-control" id="txtEmail">
+            </div>
+            <div class="form-group">
+                <label for="txtTelefone">Telefone</label>
+                <input type="text" [(ngModel)]="usuario.telefone" 
+                class="form-control" id="txtTelefone">
+            </div>
+        </div>
+        <button (click)="salvar()"
+            class="btn btn-primary">Salvar</button>
+    </div>
+</main>
