--- a/fabsoft-frontend/src/app/usuario/usuario.html
+++ b/fabsoft-frontend/src/app/usuario/usuario.html
@@ -16,9 +16,32 @@
                 <td>{{ umUsuario.nome }}</td>
                 <td>{{ umUsuario.email }}</td>
                 <td>{{ umUsuario.telefone }}</td>
-                <td> <button (click)="alterar(umUsuario)" 
-                    class="btn btn-secondary">Alterar</button> </td>
+                <td> <button
+                        (click)="alterar(umUsuario)" 
+                    class="btn btn-secondary">Alterar</button>
+                    <button 
+                        (click)="abrirComfirmacao(umUsuario)" 
+                    class="btn btn-danger">Excluir</button> 
+
+                </td>
             </tr>
         </tbody>
     </table>
 </main>
+
+<div class="modal fade" #myModal tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Excluir usuario</h5>
+            </div>
+                <div class="modal-body">
+                Confirma a exclusão do usuario?
+                </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" (click)="fecharConfirmacao()">Cancelar</button>
+                <button type="button" class="btn btn-primary" (click)="confirmarExclusao()">Sim</button>
+            </div>
+        </div>
+    </div>
+</div>
